# Containerizer

./: README.md  main_pytorch.py  pyproject.toml  setup-back.py
examples/: example.py  example_decorator.py  example_multiple.py  example_prime.py  example_prime_external_module.py  example_print.py  example_pytorch.py  example_tensorflow.py
images/: Dockerfile
src/containerizer/: __init__.py  containerizer.py  containerizer_tcp.py
yamls/: minio.yaml  namespace.yaml  registry.yaml
