[build-system]
requires = [    
        'kubernetes',
        'minio',
        'dill',
        'docker',
        'importlib_metadata',
        "colorama"]

build-backend = "setuptools.build_meta"

[project]
name = "containerizer"
version = "0.0.1"
authors = [
  { name="Daniel Suárez Labena", email="dsuarezl@ull.edu.es" },
]
description = "Tool to execute pieces of python code in kubernetes containers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dsuarezl/Containerizer"
"Bug Tracker" = "https://github.com/dsuarezl/Containerizer"